# StarRailCard

./: .gitignore  PKG-INFO  pyproject.toml  setup.py  test.py
starrailcard/: honkaicard.py  honkaicard2.py
starrailcard/src/generators/: two.py  two_new.py
starrailcard/src/tools/: calculator_file.py  modal.py  pill.py
