[tool.poetry]
name = "starrailcard"
version = "1.3.0.012"
description = "Module for generating Honkai Star Rail character cards"
authors = ["None"]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/DEViantUA/StarRailCard"
homepage = "https://github.com/DEViantUA/StarRailCard"

keywords = ["honkai", "cards", "generation", "honkaistarraill","raill", "starraill", "builds", "honkairail", "honkai"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = "^3.9.3"
bs4 = "^0.0.2"
honkairail = "^1.1.4"
more-itertools = "^10.2.0"
numpy = "^1.26.4"
Pillow = "^10.0.1"
pydantic = "<3"

[tool.poetry.dev-dependencies]
cachetools = "^5.3.1"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
